[package]
name = "imgconvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-convert = "0.13.0"
rocket = "0.5.0-rc.2"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
zip = "0.6.3"

